# dev-note

./: .gitignore  DEVPOST.md  README.md  pyproject.toml  reaper.toml
ai/supervisor/: status.json
demo/: demo_hang.py  fleet_worker.py  make_video.py  session_demo.py  worker.py
devnote/: __init__.py  cli.py  config.py  events.py  heartbeat.py  kill.py  liveness.py  protocol.py  registry.py  watcher.py
docs/: enterprise-design.md
tests/: conftest.py  test_core.py  test_kill_safety.py  test_watcher.py
